TSQ-747 Initial code to remove condition if condition check box unchecked.
git-svn-id: https://source.sakaiproject.org/svn/content/branches/SAK-11543@37142 66ffb92e-73f9-0310-93c1-f5514f145a0a